force-app/main/default/objects/CAMPX__Family_Support_Plan__c/CAMPX__Family_Support_Plan__c.object-meta.xml
<CustomObject>
    <description>Family Support Plan: One record per big theme of help the village is providing (e.g., Prepare the Nursery, Postpartum Meals, Welcome Home Celebration).</description>
    <label>Family Support Plan</label>
    <nameField>
        <displayFormat>FSP-{00000}</displayFormat>
        <label>Family Support Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Support Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>