force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Family_Goal__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Family_Goal__c</fullName>
    <description>Plain-language outcome for this plan.</description>
    <inlineHelpText>Describe the desired outcome in plain language. Example: &quot;Nursery is fully set up and safe one week before due date.&quot;</inlineHelpText>
    <label>Family Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>