force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Focus_Area__c</fullName>
    <description>The primary theme for this plan.</description>
    <inlineHelpText>Select the primary theme to help categorize tasks and goals for reporting and filters.</inlineHelpText>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nursery &amp; Home Setup</fullName>
            </value>
            <value>
                <fullName>Food &amp; Meals</fullName>
            </value>
            <value>
                <fullName>Decorations &amp; Atmosphere</fullName>
            </value>
            <value>
                <fullName>Gifts &amp; Memories</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Outdoor Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>