force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Phase__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Phase__c</fullName>
    <description>Lifecycle phase of the plan with respect to baby&apos;s arrival.</description>
    <inlineHelpText>When this plan is being worked relative to baby’s arrival. Use to filter planning vs. post-arrival efforts.</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Baby Arrives</fullName>
                <default>true</default>
                <label>Before Baby Arrives</label>
            </value>
            <value>
                <fullName>After Baby Arrives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>