force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Primary_Character__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Primary_Character__c</fullName>
    <description>Who is leading this plan?</description>
    <inlineHelpText>Choose the villager or family member primarily responsible for shepherding this plan.</inlineHelpText>
    <label>Primary Character</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mama &amp; Papa</fullName>
            </value>
            <value>
                <fullName>Stella Pinewood</fullName>
            </value>
            <value>
                <fullName>Finn Brightwick</fullName>
            </value>
            <value>
                <fullName>Poppy Wintergold</fullName>
            </value>
            <value>
                <fullName>Shakira Maestro</fullName>
            </value>
            <value>
                <fullName>Ivy Evergreen</fullName>
            </value>
            <value>
                <fullName>Grandma Kelly</fullName>
            </value>
            <value>
                <fullName>Tinker Bellwright</fullName>
            </value>
            <value>
                <fullName>Monica Patchwork</fullName>
            </value>
            <value>
                <fullName>Dr. Grace Evergreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>