force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Priority__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Priority__c</fullName>
    <description>Priority of this plan.</description>
    <inlineHelpText>Optional priority level to help triage across multiple plans.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>