force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Story_Description__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Story_Description__c</fullName>
    <description>In-world narrative description of what this plan is about.</description>
    <inlineHelpText>Write a short, in-world description of the plan&apos;s theme and intent. Example: &quot;Stella and Poppy are teaming up to get the nursery cozy, safe, and ready before Baby Shaya arrives.&quot;</inlineHelpText>
    <label>Story Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>