force-app/main/default/objects/CAMPX__Family_Support_Plan__c/fields/CAMPX__Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Target_Completion_Date__c</fullName>
    <description>Target date for completing the plan&apos;s goals.</description>
    <inlineHelpText>Optional target date by which the plan&apos;s goals should be completed.</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>